# my-love-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  workflow.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  test_and_deploy.yml
alembic/: env.py
alembic/versions/: 1303a4a62b28_add_partial_index_for_pending_files_.py  141073584803_url_into_path_in_media.py  2e53fc6bdddc_couples_table_added.py  3647dab1ac3a_media_table_added.py  44d3e30b1b94_couple_members_table_added.py  48f5e6ebad13_idempotency_keys_table_removed.py  4cf4d77a2e3b_modified_comments.py  6600f29d2b93_database_init.py  750559a061c1_renamed_media_albums_to_albums.py  7f010fca31e9_invariants_for_couple_requests.py  913140dd0a81_added_notes_table.py  9ab5dc45ccac_album_items_mtm_relations_table.py  9c859fd8c955_refactor_comment_on_users_display_name.py  9e1efbb8da06_add_trigram_indexes.py  a28895033408_media_renamed_in_files.py  aa39efc53643_partners_one_to_one_relations.py  d8ec362834fd_media_albums_table_added.py  d9f8cabe5055_couples_request_accept_system.py  ddcb5b60834c_files_idempotency_and_status_enums.py  ec7dac4fccee_naming_refactoring.py  fc00053c3ca8_added_user_sessions.py
ansible/: ansible.cfg  playbook.yml
ansible/inventory/: production.yml.example
ansible/templates/: api.nginx.conf.j2  daemon.json.j2  storage.nginx.conf.j2
app/: config.py  exceptions.py  main.py
app/api/: root.py
app/core/: consts.py  docs.py  enums.py  exceptions.py  filtering.py  infrastructure.py  rate_limiter.py  security.py  session.py  types.py  unit_of_work.py  validation.py  validators.py
app/handlers/: __init__.py
app/infra/: redis.py
app/infrastructure/: minio.py  postgresql.py  redis.py  s3.py
app/models/: __init__.py  album.py  album_items.py  base.py  couple.py  couple_member.py  couple_request.py  file.py  idempotency_key.py  media.py  media_album.py  note.py  user.py  user_session.py
app/repositories/: couple.py  couple_request.py  couples.py  idempotency.py  interface.py  media.py  note.py  notes.py  user.py  users.py  (+1 more)
scripts/: clear_pycache.ps1  clear_pycache.sh  compile_pip.ps1  compile_pip.sh  gen_keys.sh
(+134 files in other folders)
