[project]
name = "my-love-backend"
version = "0.4.1"
description = "Романтичное приложение-подарок на 14 февраля от Лёши для Светы."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-aiobotocore>=3.1.0",
    "types-aiobotocore-s3>=3.1.0",
]
